# vscode-parquet-viewer

./: .actrc  .cspell.json  .eslintrc.yml  .gitignore  .npmrc  .releaserc.yml  .vscodeignore  CHANGELOG.md  Dockerfile  LICENSE.txt  README.md  codemagic.yaml  jest.config.ts  package-lock.json  package.json  requirements.txt  tsconfig.json  webpack.config.js
.devcontainer/: .env.sample  Dockerfile  devcontainer-lock.json  devcontainer.json
.github/scripts/: find-rc.ps1
.github/workflows/: dependabot-automerge.yml  dependabot_pr.yml  lockfile.yml  main.yml  release.yml  stale.yml
.husky/: commit-msg  pre-commit
scripts/: build-apple-m1.ts
src/: arrow-backend.ts  backend-name.ts  binding-options.d.ts  binding-options.js  extension.ts  formatter-factory.ts  formatter.ts  global-state.ts  json-formatter.ts  logger.ts  parquet-backend-factory.ts  parquet-backend.ts  parquet-document-provider.ts  parquet-document.ts  parquet-editor-provider.ts  parquet-tools-backend.ts  parquet-tools-runner.ts  parquet_content_provider.ts  parquets-backend.ts  settings.ts
src/arrow-parquet-reader/: CMakeLists.txt  addon.cpp
src/backends/: arrow-backend.ts  arrow-cpp-backend.ts  backend-name.ts  parquet-backend-factory.ts  parquet-backend.ts  parquet-tools-backend.ts  parquet-wasm-backend.ts  parquets-backend.ts  record-batch-transform.ts
src/formatters/: csv-formatter.ts  formatter-factory.ts  formatter-name.ts  json-formatter.ts
src/test/: extension.test.ts  provider.test.ts  runTest.ts  utils.ts
src/test/suite/: extension.test.ts  index.ts  logger.test.ts  parquet-tools-runner.test.ts  provider.test.ts  utils.ts
src/test/workspace/: large.json  test.code-workspace
test/: runTest.ts
test/integration/: extension.test.ts  jest.config.ts  logger.test.ts  parquet-editor-provider.test.ts  runTests.ts  test-process.ts  utils.ts
test/integration/__mocks__/: vscode.ts
test/suite/: index.ts  logger.test.ts  parquet-tools-backend.test.ts  parquet-tools-runner.test.ts  parquets-backend.test.ts  utils.ts
test/unit/: arrow-backend.test.ts  automocks.ts  backend.test.ts  csv.test.ts  jest.config.ts  json.test.ts  parquet-tools-backend.test.ts  parquets-backend.test.ts  parquets.test.ts  settings.test.ts  workspace.ts  zip.ts
test/unit/__mocks__/: vscode.ts
test/unit/mocks/: vscode.ts
test/workspace/: large.arrow.json  lz4.parquet  polars.json
test/workspace/csv/: floating.csv  large.arrow.csv  large.csv  polars.csv  small.csv
test/workspace/json/: floating.json  small.json  version_2.json
(+6 files in other folders)
